--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,6 @@
     <version>2.0</version>
 
     <dependencies>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
-        </dependency>
 
         <dependency>
             <groupId>commons-cli</groupId>
@@ -22,33 +17,37 @@
         </dependency>
 
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.5.7</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.5.7</version>
+            <scope>compile</scope>
+        </dependency>
+
+
+        <dependency>
             <groupId>io.appium</groupId>
             <artifactId>java-client</artifactId>
             <version>6.1.0</version>
         </dependency>
 
         <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.20</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>org.jcodec</groupId>
             <artifactId>jcodec-javase</artifactId>
             <version>0.2.3</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.jcodec</groupId>
-            <artifactId>jcodec</artifactId>
-            <version>0.2.3</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-            <version>1.20</version>
-        </dependency>
-        <!--<dependency>-->
-        <!--<groupId>io.humble</groupId>-->
-        <!--<artifactId>humble-video-all</artifactId>-->
-        <!--<version>0.2.1</version>-->
-        <!--</dependency>-->
     </dependencies>
 
     <properties>
@@ -84,7 +83,6 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>Crawler</mainClass>
